update config to nlp practicum path

--- a/lessons/lesson_1_configuration/Configuration_Lesson.ipynb
+++ b/lessons/lesson_1_configuration/Configuration_Lesson.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {
       "image/png": {
        "height": 700,
@@ -51,7 +51,7 @@
    "source": [
     "### Magic Commands\n",
     "\n",
-    "By placing a '#' in from of command line commands, we can run them from a Jupyter Notebook. We call these magic commands"
+    "By placing a '%' in from of command line commands, we can run them from a Jupyter Notebook. We call these magic commands"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\alsherman\\\\Desktop\\\\PycharmProjects\\\\firm_initiatives\\\\ml_guild\\\\lessons\\\\lesson1_configuration'"
+       "'C:\\\\Users\\\\alsherman\\\\Desktop\\\\nlp_practicum_cohort1\\\\lessons\\\\lesson_1_configuration'"
       ]
      },
      "execution_count": 2,
@@ -84,52 +84,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\n"
+      "C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\n"
      ]
     }
    ],
    "source": [
-    "# cd to the ml_guild\n",
+    "# cd to the nlp_practicum\n",
     "%cd ../.."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Volume in drive C is OSDisk\n",
-      " Volume Serial Number is 1C4D-03FA\n",
-      "\n",
-      " Directory of C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\n",
-      "\n",
-      "03/02/2018  11:12 PM    <DIR>          .\n",
-      "03/02/2018  11:12 PM    <DIR>          ..\n",
-      "03/02/2018  11:15 PM    <DIR>          .git\n",
-      "01/11/2018  12:43 AM             1,299 .gitignore\n",
-      "03/02/2018  11:22 PM    <DIR>          .idea\n",
-      "01/04/2018  09:27 PM    <DIR>          .ipynb_checkpoints\n",
-      "01/21/2018  01:59 PM             1,477 config.ini\n",
-      "11/23/2017  10:42 AM    <DIR>          homework\n",
-      "01/03/2018  09:40 PM    <DIR>          lessons\n",
-      "01/10/2018  11:11 PM    <DIR>          project\n",
-      "01/19/2018  07:40 PM    <DIR>          raw_data\n",
-      "01/03/2018  01:05 PM             2,576 README.md\n",
-      "11/26/2017  09:57 PM               846 test.spec\n",
-      "01/19/2018  07:37 PM             1,663 TODO\n",
-      "03/02/2018  11:13 PM    <DIR>          video\n",
-      "               5 File(s)          7,861 bytes\n",
-      "              10 Dir(s)  212,358,520,832 bytes free\n"
-     ]
-    }
-   ],
-   "source": [
-    "# view the files to confirm the raw_data dir exists\n",
-    "%ls"
    ]
   },
   {
@@ -144,38 +105,26 @@
       " Volume in drive C is OSDisk\n",
       " Volume Serial Number is 1C4D-03FA\n",
       "\n",
-      " Directory of C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\n",
+      " Directory of C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\n",
       "\n",
-      "01/19/2018  07:40 PM    <DIR>          .\n",
-      "01/19/2018  07:40 PM    <DIR>          ..\n",
-      "01/02/2018  09:23 AM            31,468 airline_acronyms.csv\n",
-      "01/19/2018  07:40 PM                 0 annual_report.db\n",
-      "01/14/2018  05:07 AM    <DIR>          chromedriver\n",
-      "03/02/2018  11:07 PM    <DIR>          configuration_files\n",
-      "01/17/2018  11:14 AM    <DIR>          databases\n",
-      "11/18/2017  11:32 PM            11,662 docx_example.zip\n",
-      "01/04/2018  11:54 PM    <DIR>          docx_text\n",
-      "11/22/2017  08:47 PM    <DIR>          ebay\n",
-      "11/22/2017  08:47 PM    <DIR>          federal_open_demands\n",
-      "01/02/2018  09:23 AM    <DIR>          gensim\n",
-      "01/02/2018  09:23 AM    <DIR>          images\n",
-      "11/26/2017  05:57 PM    <DIR>          lesson_images\n",
-      "11/22/2017  08:47 PM    <DIR>          nvidia-corporation\n",
-      "01/05/2018  11:33 AM    <DIR>          oracle-corporation\n",
-      "12/23/2017  12:22 AM           534,269 oracle-corporation.zip\n",
-      "11/22/2017  08:47 PM    <DIR>          sap-ag\n",
-      "01/02/2018  09:23 AM           458,637 southwest_2016.txt\n",
-      "01/07/2018  03:05 PM    <DIR>          southwest-airlines-co\n",
-      "01/14/2018  05:41 AM     2,347,110,159 stackoverflow.zip\n",
-      "11/22/2017  08:47 PM    <DIR>          yahoo\n",
-      "               6 File(s)  2,348,146,195 bytes\n",
-      "              16 Dir(s)  212,358,520,832 bytes free\n"
+      "03/21/2018  12:15 AM    <DIR>          .\n",
+      "03/21/2018  12:15 AM    <DIR>          ..\n",
+      "03/18/2018  10:38 PM             1,491 .gitignore\n",
+      "03/19/2018  12:10 AM               382 Authors.md\n",
+      "03/20/2018  10:08 PM             1,630 config.ini\n",
+      "03/18/2018  11:36 PM    <DIR>          homework\n",
+      "03/18/2018  11:33 PM    <DIR>          lessons\n",
+      "03/18/2018  11:57 PM    <DIR>          raw_data\n",
+      "03/11/2018  07:43 PM             2,572 README.md\n",
+      "03/19/2018  02:49 PM             2,923 requirements.txt\n",
+      "               5 File(s)          8,998 bytes\n",
+      "               5 Dir(s)  200,555,986,944 bytes free\n"
      ]
     }
    ],
    "source": [
-    "# view the directories and files inside the raw_data dir\n",
-    "%ls raw_data"
+    "# view the files to confirm the raw_data dir exists\n",
+    "%ls"
    ]
   },
   {
@@ -187,7 +136,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\\configuration_files\n"
+      " Volume in drive C is OSDisk\n",
+      " Volume Serial Number is 1C4D-03FA\n",
+      "\n",
+      " Directory of C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\n",
+      "\n",
+      "03/18/2018  11:57 PM    <DIR>          .\n",
+      "03/18/2018  11:57 PM    <DIR>          ..\n",
+      "01/02/2018  10:23 AM            31,468 airline_acronyms.csv\n",
+      "03/11/2018  06:18 PM    <DIR>          chromedriver\n",
+      "03/18/2018  11:34 PM    <DIR>          cleaned_text\n",
+      "03/18/2018  11:44 PM    <DIR>          configuration_files\n",
+      "11/19/2017  12:32 AM            11,662 docx_example.zip\n",
+      "03/11/2018  06:18 PM    <DIR>          docx_text\n",
+      "03/11/2018  06:18 PM    <DIR>          gensim\n",
+      "03/18/2018  11:33 PM    <DIR>          images\n",
+      "12/23/2017  01:22 AM           534,269 oracle-corporation.zip\n",
+      "01/02/2018  10:23 AM           458,637 southwest_2016.txt\n",
+      "03/11/2018  06:18 PM    <DIR>          southwest-airlines-co\n",
+      "               4 File(s)      1,036,036 bytes\n",
+      "               9 Dir(s)  200,556,052,480 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "# view the directories and files inside the raw_data dir\n",
+    "%ls raw_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\\configuration_files\n"
      ]
     }
    ],
@@ -198,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\alsherman\\\\Desktop\\\\PycharmProjects\\\\firm_initiatives\\\\ml_guild\\\\raw_data\\\\configuration_files'"
+       "'C:\\\\Users\\\\alsherman\\\\Desktop\\\\nlp_practicum_cohort1\\\\raw_data\\\\configuration_files'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,42 +215,23 @@
       " Volume in drive C is OSDisk\n",
       " Volume Serial Number is 1C4D-03FA\n",
       "\n",
-      " Directory of C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\\configuration_files\n",
+      " Directory of C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\\configuration_files\n",
       "\n",
-      "03/02/2018  11:07 PM    <DIR>          .\n",
-      "03/02/2018  11:07 PM    <DIR>          ..\n",
-      "03/02/2018  11:08 PM    <DIR>          all_ini\n",
-      "03/02/2018  11:40 PM    <DIR>          aws_config_files_1\n",
-      "12/10/2017  09:36 PM    <DIR>          aws_config_files_2\n",
-      "12/10/2017  09:36 PM    <DIR>          aws_config_files_3\n",
-      "12/10/2017  09:36 PM    <DIR>          aws_config_files_4\n",
-      "12/10/2017  09:36 PM    <DIR>          aws_config_files_5\n",
+      "03/18/2018  11:44 PM    <DIR>          .\n",
+      "03/18/2018  11:44 PM    <DIR>          ..\n",
+      "03/11/2018  06:18 PM    <DIR>          aws_config_files_1\n",
+      "03/11/2018  06:18 PM    <DIR>          aws_config_files_2\n",
+      "03/11/2018  06:18 PM    <DIR>          aws_config_files_3\n",
+      "03/11/2018  06:18 PM    <DIR>          aws_config_files_4\n",
+      "03/11/2018  06:18 PM    <DIR>          aws_config_files_5\n",
       "               0 File(s)              0 bytes\n",
-      "               8 Dir(s)  212,358,520,832 bytes free\n"
+      "               7 Dir(s)  200,556,048,384 bytes free\n"
      ]
     }
    ],
    "source": [
     "# list the directories and files\n",
     "%ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\\configuration_files\\aws_config_files_1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# cd in aws_config_files_1\n",
-    "%cd aws_config_files_1"
    ]
   },
   {
@@ -276,23 +243,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\\configuration_files\\aws_config_files_1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cd in aws_config_files_1\n",
+    "%cd aws_config_files_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " Volume in drive C is OSDisk\n",
       " Volume Serial Number is 1C4D-03FA\n",
       "\n",
-      " Directory of C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\\configuration_files\\aws_config_files_1\n",
+      " Directory of C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\\configuration_files\\aws_config_files_1\n",
       "\n",
-      "03/02/2018  11:40 PM    <DIR>          .\n",
-      "03/02/2018  11:40 PM    <DIR>          ..\n",
-      "03/02/2018  11:43 PM               187 config_extended.ini\n",
-      "12/10/2017  10:21 PM               157 config1.ini\n",
-      "12/10/2017  09:29 PM               156 config13.ini\n",
-      "12/10/2017  09:29 PM               156 config16.ini\n",
-      "12/10/2017  09:31 PM               322 config19.ini\n",
-      "12/10/2017  09:31 PM               322 config22.ini\n",
-      "12/10/2017  09:31 PM               322 config24.ini\n",
-      "12/10/2017  09:28 PM               156 config5.ini\n",
+      "03/11/2018  06:18 PM    <DIR>          .\n",
+      "03/11/2018  06:18 PM    <DIR>          ..\n",
+      "03/03/2018  12:43 AM               187 config_extended.ini\n",
+      "12/10/2017  11:21 PM               157 config1.ini\n",
+      "12/10/2017  10:29 PM               156 config13.ini\n",
+      "12/10/2017  10:29 PM               156 config16.ini\n",
+      "12/10/2017  10:31 PM               322 config19.ini\n",
+      "12/10/2017  10:31 PM               322 config22.ini\n",
+      "12/10/2017  10:31 PM               322 config24.ini\n",
+      "12/10/2017  10:28 PM               156 config5.ini\n",
       "               8 File(s)          1,778 bytes\n",
-      "               2 Dir(s)  212,358,516,736 bytes free\n"
+      "               2 Dir(s)  200,555,700,224 bytes free\n"
      ]
     }
    ],
@@ -314,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +334,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -387,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +381,7 @@
        "['config1.ini']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +402,7 @@
        "['default', 'keys']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +423,7 @@
        "'us-west-2'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -477,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -489,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +483,7 @@
        "['config_extended.ini']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +507,7 @@
        "['default', 'profile user2', 'extended']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +527,7 @@
        "'us-east-1 is active'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
