--- a/lessons/lesson_3_databases/SQLAlchemy_lesson.ipynb
+++ b/lessons/lesson_3_databases/SQLAlchemy_lesson.ipynb
@@ -41,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sqlalchemy_url = 'http://www.sqlalchemy.org/'\n",
@@ -76,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tutorial_url = 'http://docs.sqlalchemy.org/en/latest/orm/tutorial.html'\n",
@@ -173,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sections = Sections()\n",
@@ -192,9 +186,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "section = Sections(\n",
+    "      section_name = 'first section'\n",
+    "    , section_text = 'text from the first section'\n",
+    ")\n",
+    "section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "list_one = ['a','b','c']\n",
@@ -207,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# confirm test database directory\n",
@@ -228,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "database_url = 'http://docs.sqlalchemy.org/en/latest/core/engines.html'\n",
@@ -355,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# query database to check if data was added\n",
@@ -371,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# view the __repr__ of the SQLAlchemy class\n",
@@ -382,23 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'session' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-e2a35509f0bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Uncomment to delete data from Sections to reset table (optional)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#session.execute(\"DELETE FROM Sections\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'session' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Uncomment to delete data from Sections to reset table (optional)\n",
+    "\n",
     "#session.execute(\"DELETE FROM Sections\")\n",
     "session.commit()"
    ]
@@ -484,6 +470,19 @@
    },
    "outputs": [],
    "source": [
+    "database_url = 'http://docs.sqlalchemy.org/en/latest/orm/tutorial.html'\n",
+    "iframe = '<iframe src={} width=1100 height=300></iframe>'.format(database_url)\n",
+    "HTML(iframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# SQLAlchamy Core - SQL Expression Language\n",
     "from sqlalchemy.sql import text\n",
     "\n",
@@ -517,9 +516,8 @@
    },
    "outputs": [],
    "source": [
-    "database_url = 'http://docs.sqlalchemy.org/en/latest/orm/tutorial.html'\n",
-    "iframe = '<iframe src={} width=1100 height=300></iframe>'.format(database_url)\n",
-    "HTML(iframe)"
+    "# view __repr__ of result\n",
+    "print(session.query(StackOverflow)[0])"
    ]
   },
   {
@@ -925,6 +923,9 @@
    },
    "outputs": [],
    "source": [
+    "# NOTE: you must download the stackoverflow zip (2GB zip file) for below code to work\n",
+    "# https://www.kaggle.com/c/facebook-recruiting-iii-keyword-extraction/data\n",
+    "\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
     "import zipfile\n",
@@ -940,7 +941,8 @@
     "        , encoding='utf-8'\n",
     "        , nrows=50_000)):\n",
     "    \n",
-    "    df.to_sql('STACKOVERFLOW', con=engine, if_exists='append')"
+    "    # uncomment to write to db \n",
+    "    #df.to_sql('STACKOVERFLOW', con=engine, if_exists='append')"
    ]
   }
  ],
