--- a/lessons/lesson_3_databases/SQLAlchemy_solution.ipynb
+++ b/lessons/lesson_3_databases/SQLAlchemy_solution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -148,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# provide a class name for the database table\n",
@@ -167,8 +165,8 @@
     "    section_text = Column(Text())\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return '<Sections section_id: {} | section_name: {}>'.format(\n",
-    "            self.section_id, self.section_name)"
+    "        return '<Sections section_id: {} | section_name: {} | section_text: {}>'.format(\n",
+    "            self.section_id, self.section_name, self.section_text)"
    ]
   },
   {
@@ -188,23 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Sections section_id: None | section_name: None>"
+       "<Sections section_id: None | section_name: None | section_text: None>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sections = Sections()\n",
-    "sections"
+    "section = Sections()\n",
+    "section"
    ]
   },
   {
@@ -216,23 +214,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Sections section_id: None | section_name: first section | section_text: text from the first section>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "section = Sections(\n",
+    "      section_name = 'first section'\n",
+    "    , section_text = 'text from the first section'\n",
+    ")\n",
+    "section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x000002A81CD9B988>\n"
+      "<zip object at 0x0000025335013B08>\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<zip at 0x2a81cd9b988>"
+       "<zip at 0x25335013b08>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sqlite:///C:\\\\Users\\\\alsherman\\\\Desktop\\\\PycharmProjects\\\\firm_initiatives\\\\ml_guild\\\\raw_data\\\\databases\\\\test.db'"
+       "'sqlite:///C:\\\\Users\\\\alsherman\\\\Desktop\\\\nlp_practicum_cohort1\\\\raw_data\\\\databases\\\\test.db'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +311,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,27 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sqlite:///C:\\\\Users\\\\alsherman\\\\Desktop\\\\PycharmProjects\\\\firm_initiatives\\\\ml_guild\\\\raw_data\\\\databases\\\\test.db'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TEST_DB_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -460,16 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Sections section_id: 1 | section_name: first section>]"
+       "[<Sections section_id: 1 | section_name: first section | section_text: text from the first section>]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,13 +483,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Uncomment to delete data from Sections to reset table (optional)\n",
+    "\n",
     "#session.execute(\"DELETE FROM Sections\")\n",
     "session.commit()"
    ]
@@ -526,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -547,16 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sqlite:///C:\\\\Users\\\\alsherman\\\\Desktop\\\\PycharmProjects\\\\firm_initiatives\\\\ml_guild\\\\raw_data\\\\databases\\\\stackoverflow.sqlite'"
+       "'sqlite:///C:\\\\Users\\\\alsherman\\\\Desktop\\\\nlp_practicum_cohort1\\\\raw_data\\\\databases\\\\stackoverflow.sqlite'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -591,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +606,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -683,32 +686,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<iframe src=http://docs.sqlalchemy.org/en/latest/orm/tutorial.html width=1100 height=300></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<StackOverflow Id: 1 | Title: How to check if an uploaded file is an image without mime type?>\n"
+     ]
     }
    ],
    "source": [
-    "database_url = 'http://docs.sqlalchemy.org/en/latest/orm/tutorial.html'\n",
-    "iframe = '<iframe src={} width=1100 height=300></iframe>'.format(database_url)\n",
-    "HTML(iframe)"
+    "# view __repr__ of result\n",
+    "print(session.query(StackOverflow)[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +781,7 @@
        "2                          r matlab machine-learning  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +812,7 @@
        " (3, 'r matlab machine-learning')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +836,7 @@
        " (3, 'r matlab machine-learning')]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +923,7 @@
        "2   3                          r matlab machine-learning"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +953,7 @@
        " (1194, 'python', 'How to : Python Convert Bytes to Readable ASCII/Unicode')]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +977,7 @@
        " (1194, 'How to : Python Convert Bytes to Readable ASCII/Unicode')]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1071,7 @@
        "2  1194  python  How to : Python Convert Bytes to Readable ASCI..."
       ]
      },
-     "execution_count": 40,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,18 +1628,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZIP NAME: C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\\stackoverflow.zip \n",
+      "ZIP NAME: C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\\stackoverflow.zip \n",
       "\n",
       "CSV NAME: Train.csv \n",
       "\n",
-      "DB PATH: sqlite:///C:\\Users\\alsherman\\Desktop\\PycharmProjects\\firm_initiatives\\ml_guild\\raw_data\\databases\\stackoverflow.sqlite\n"
+      "DB PATH: sqlite:///C:\\Users\\alsherman\\Desktop\\nlp_practicum_cohort1\\raw_data\\databases\\stackoverflow.sqlite\n"
      ]
     }
    ],
@@ -1656,12 +1652,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE: you must download the stackoverflow zip (2GB zip file) for below code to work\n",
+    "# https://www.kaggle.com/c/facebook-recruiting-iii-keyword-extraction/data\n",
+    "\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
     "import zipfile\n",
@@ -1677,7 +1674,8 @@
     "        , encoding='utf-8'\n",
     "        , nrows=50_000)):\n",
     "    \n",
-    "    df.to_sql('STACKOVERFLOW', con=engine, if_exists='append')"
+    "    # uncomment to write to db \n",
+    "    #df.to_sql('STACKOVERFLOW', con=engine, if_exists='append')"
    ]
   }
  ],
