update installation instructions

--- a/installation/Installation_Instructions.ipynb
+++ b/installation/Installation_Instructions.ipynb
@@ -19,8 +19,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Required Installation\n",
+    "In Git Bash, type the following to install package(s) for the lesson:\n",
+    "- pip install mysqlclient"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,15 +47,11 @@
     "from sqlalchemy.sql import text\n",
     "from sqlalchemy.orm import sessionmaker\n",
     "from sqlalchemy.engine import reflection\n",
-    "from sqlalchemy.ext.declarative import declarative_base"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "install the following package(s) to connect to a MySQL database on AWS:\n",
-    "- pip install mysqlclient"
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "# Installation Sources:\n",
+    "# pandas: conda install -c anaconda pandas\n",
+    "# sqlalchemy: conda install -c anaconda sqlalchemy "
    ]
   },
   {
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -78,6 +83,18 @@
    "display_name": "guild",
    "language": "python",
    "name": "guild"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
