--- a/installation/Installation_Instructions.ipynb
+++ b/installation/Installation_Instructions.ipynb
@@ -76,6 +76,66 @@
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy.orm import sessionmaker"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lesson - Text Extraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Required Installation\n",
+    "In Git Bash, type the following to install package(s) for the lesson:\n",
+    "- conda install -c conda-forge pdfminer.six"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "from IPython.display import Image\n",
+    "from IPython.core.display import display, HTML\n",
+    "from configparser import ConfigParser, ExtendedInterpolation\n",
+    "import docx\n",
+    "from bs4 import BeautifulSoup\n",
+    "import zipfile\n",
+    "import lxml\n",
+    "\n",
+    "# Installation Sources:\n",
+    "# docx: conda install -c conda-forge python-docx \n",
+    "# lxml: conda install -c anaconda lxml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Homework - Text Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "import os\n",
+    "import docx\n",
+    "from configparser import ConfigParser, ExtendedInterpolation"
+   ]
   }
  ],
  "metadata": {
