--- a/installation/NLP Practicum Installation Instructions.ipynb
+++ b/installation/NLP Practicum Installation Instructions.ipynb
@@ -377,13 +377,16 @@
     "from collections import defaultdict\n",
     "from spacy.lang.en.stop_words import STOP_WORDS\n",
     "from IPython.core.display import display, HTML\n",
-    "from configparser import ConfigParser, ExtendedInterpolation"
+    "from configparser import ConfigParser, ExtendedInterpolation\n",
+    "\n",
+    "# # Installation Sources:\n",
+    "# gensim: conda install -c anaconda gensim "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -397,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
