update final lessons

--- a/lessons/lesson12_document_classification/Document Classification.ipynb
+++ b/lessons/lesson12_document_classification/Document Classification.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "2  <function heading at 0x000001D4AA492EA0>            1553  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "0  <function heading at 0x000001D4AA492EA0>              83  1994  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 14,
      "metadata": {
       "image/png": {
        "width": 250
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1]\n",
+      "macro: 0.667\n",
+      "micro: 0.667\n",
+      "weighted: 0.667\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiclass classification\n",
+    "y_true =  [0,1,1]\n",
+    "y_pred = [[0,0,1]]   # two mistakes in class 1\n",
+    "\n",
+    "for pred in y_pred:\n",
+    "    print(pred)\n",
+    "    for option in average_options:\n",
+    "        print('{}: {:.3f}'.format(option, f1_score(y_true, pred, average=option)))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +935,7 @@
        "Name: contains_fee, dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +957,7 @@
        "0.9366548042704627"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +1017,7 @@
        "0.1450777202072539"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,15 +1077,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.930298719772404\n",
-      "f1: 0.0\n"
+      "accuracy: 0.9459459459459459\n",
+      "f1: 0.5681818181818181\n"
      ]
     }
    ],
@@ -1071,7 +1100,7 @@
     "train_fit_vect = vect.fit_transform(X_train)\n",
     "\n",
     "# build and evaluate model using train test split\n",
-    "logreg = LogisticRegression()\n",
+    "logreg = LogisticRegression(C=100)\n",
     "logreg.fit(train_fit_vect, y_train)\n",
     "\n",
     "# transform testing data for evaluation\n",
@@ -1105,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1256,7 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,25 +1283,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([0.012007  , 0.00799632, 0.00799394]),\n",
-       " 'score_time': array([0.00300169, 0.00300312, 0.00100112]),\n",
-       " 'test_f1': array([0.58252427, 0.54761905, 0.5       ]),\n",
-       " 'train_f1': array([0.83653846, 0.82233503, 0.79792746]),\n",
-       " 'test_accuracy': array([0.94905213, 0.95492289, 0.94774347]),\n",
-       " 'train_accuracy': array([0.97982196, 0.97924081, 0.97688204]),\n",
-       " 'test_precision': array([0.6122449 , 0.76666667, 0.62857143]),\n",
-       " 'train_precision': array([0.86138614, 0.9       , 0.90588235]),\n",
-       " 'test_recall': array([0.55555556, 0.42592593, 0.41509434]),\n",
-       " 'train_recall': array([0.81308411, 0.75700935, 0.71296296])}"
+       "{'fit_time': array([0.01249766, 0.01199794, 0.02199936]),\n",
+       " 'score_time': array([0.00650549, 0.00500131, 0.00550056]),\n",
+       " 'test_f1': array([0.51219512, 0.56410256, 0.56756757]),\n",
+       " 'train_f1': array([0.8313253 , 0.87058824, 0.79012346]),\n",
+       " 'test_accuracy': array([0.943101  , 0.95156695, 0.95441595]),\n",
+       " 'train_accuracy': array([0.98005698, 0.98434164, 0.97580071]),\n",
+       " 'test_precision': array([0.55263158, 0.62857143, 0.67741935]),\n",
+       " 'train_precision': array([0.8625    , 0.89156627, 0.85333333]),\n",
+       " 'test_recall': array([0.47727273, 0.51162791, 0.48837209]),\n",
+       " 'train_recall': array([0.80232558, 0.85057471, 0.73563218])}"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,9 +1569,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cross_val_score' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-40-3ae1955bbda0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[0minner_cv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlogreg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparam_grid\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mp_grid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minner_cv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m     \u001b[0mnested_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfit_vect\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mouter_cv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m     \u001b[0mnested_scores\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnested_score\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cross_val_score' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV, KFold\n",
     "\n",
@@ -1577,23 +1618,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9537367697719886, 0.9558723816994895, 0.9516026781234892, 0.9530252791992386, 0.9558761823969935, 0.9523156889752408, 0.9516000176352364, 0.9459077129834869, 0.9537352494929868, 0.9540932751978644]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(nested_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 164,
    "metadata": {},
    "outputs": [
@@ -1610,14 +1634,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9537367697719886, 0.9558723816994895, 0.9516026781234892, 0.9530252791992386, 0.9558761823969935, 0.9523156889752408, 0.9516000176352364, 0.9459077129834869, 0.9537352494929868, 0.9540932751978644]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nested_scores)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification Models\n",
-    "\n",
-    "- Naive Bayes\n",
-    "- RandomForest\n",
-    "- AdaBoost"
+    "# Classification Models"
    ]
   },
   {
@@ -1648,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1685,14 +1722,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5238935540140359\n"
+      "0.5333128520225294\n"
      ]
     }
    ],
@@ -1700,7 +1737,16 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "rf = RandomForestClassifier(n_estimators=1000)\n",
     "scores = cross_val_score(rf, train_fit_vect, y_train, cv=3, scoring='f1')\n",
-    "print(scores.mean())"
+    "print(scores.mean())\n",
+    "\n",
+    "\n",
+    "1  T\n",
+    "2  F\n",
+    "3  F\n",
+    "\n",
+    "1 .33  .2\n",
+    "2 .33  .4\n",
+    "3 .33  .4"
    ]
   },
   {
@@ -1846,14 +1892,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5169934640522876\n"
+      "0.5141966857762187\n"
      ]
     },
     {
@@ -1914,21 +1960,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5822646175587352\n"
+      "0.5822710622710623\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(100), random_state=42)\n",
+    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(100,100), random_state=42)\n",
     "scores = cross_val_score(clf, train_fit_vect, y_train, cv=3, scoring='f1')\n",
     "print(scores.mean())                       "
    ]
