--- a/lessons/lesson_3_databases/Python for AWS Relation Database Service (RDS).ipynb
+++ b/lessons/lesson_3_databases/Python for AWS Relation Database Service (RDS).ipynb
@@ -452,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
